testing fix - 'canned responses' invisible but overtop of social links at mobile screen size - set z-index -1

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -147,6 +147,7 @@
             .soupcan-container, 
             .responses, .show-responses {
                 display: none;
+                z-index: -1;
             }
 
             .social-links {
